--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body{
   background-color: #C3D5DD;
   
 }
+
 *{
   margin:0px;
   padding:0px;
@@ -10,6 +11,7 @@ body{
 .h1Teste{ 
   text-align: center;
 }
+
 .h1Login{
   text-align: center;
   color: white;
@@ -174,8 +176,8 @@ article h1{
   height: 90vh;
   width: 85vh;
   position: relative;
-  top: 70px;
-
+  top: 120px;
+  
   
 }
 
@@ -191,8 +193,8 @@ article h1{
   flex-direction: column-reverse;
   float: right;
   position: relative;
-  top:-747px;
-  right: -40px;
+  top:-695px;
+  right: -20px;
 
 }
 
@@ -207,9 +209,21 @@ article h1{
 
 
 .h1Org{
-  font-size: 4.0vh;
+    margin: 10px;
+    position: relative;
+    top: -50px;
+    white-space: nowrap;
+    text-align: center;
+    color: black; /*PRETO temporariamente, mudar pra branco depois */
 }
 
+.subtituloOrg {
+  font-size: 14px;
+  white-space: nowrap;
+  position: relative;
+  top: -50px;
+  text-align: center;
+}
 
 
 .imgArt{
@@ -220,14 +234,27 @@ article h1{
   top: 225px;
 }
 
+
+.imgLogo{
+  position: relative;
+  top: 8px;
+  width: 30vh;
+  height: 15vh;
+}
+
+.logo:hover{
+  color: #52C7A6;
+}
+
+
 label{
   display: flex;
 }
 
 .btnDenuncia {
   width: 120px;
-  position: absolute;
-  top: 350px;
+  top: 150px;
+  position: relative;
 }
 
 .btnDenuncia:hover {
@@ -304,11 +331,23 @@ ul li a:hover {
   margin: 2px;
 }
 
-#btnCadastro{
-  background-color: #434343;
-  border: black;
-  border-radius: 10px;
+.btnCadastro{
+    width: 100px;
+    height: 19px;
+    top: 350px;
+    color: #ffffff;
+    background-color: #434343;
+    border: black;
+    border-radius: 8px;
+    
   
+}
+
+.btnCadastro:hover{
+
+  color: #52C7A6;
+  transition: 0.4s;
+  cursor: pointer;
 }
 
 .inpFiltro{
