--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ nav {
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
     background: #23232e;
     width: 100%;
-    height: 8vh;
+    height: 10vh;
     z-index: 2;
 
 
@@ -73,8 +73,12 @@ main {
 }
 
 .nav-list li {
-  letter-spacing: 3px;
-  margin-left: 32px;
+  margin-left: 38px;
+}
+
+.liMenu {
+  position: relative;
+  left: -250px;
 }
 
 .mobile-menu {
@@ -149,7 +153,8 @@ article{
   padding: 50px;  
   border-radius: 10px;
   background-color: #ffffff;
-   width: 390vh;
+  max-width: auto;
+  max-height: auto;
   font-size: 1.2vh;
   height: 400px;
 }
@@ -166,6 +171,7 @@ article h1{
   height: 550px;
   background-color: #ffffff;
   text-align: center;
+  
 }
 
 .textoProvisorio{
@@ -173,19 +179,36 @@ article h1{
 }
 
 .artiDenuncia {
-  height: 90vh;
+  height: 100vh;
   width: 85vh;
   position: relative;
-  top: 120px;
-  
+  top: 110px;
+  left: 20px;
+
   
 }
 
 .artiFiltro {
-  width:70vh;
-  height: 48vh;
+  width: 70vh;
+  height: 50.8vh;
+  margin-top: -5.7vh;
   background-color: rgb(255, 255, 255); 
   white-space: nowrap;
+  max-width: auto;
+  max-height: auto;
+}
+.lupaFiltro {
+  width: 10vh;
+  position: relative;
+  right: -60vh;
+  top: -7.2vh;
+}
+
+.lupaOrg {
+  width: 10vh;
+  position: relative;
+  right: -4vh;
+  top: -8.3vh;
 }
 
 .divArticles{
@@ -193,14 +216,14 @@ article h1{
   flex-direction: column-reverse;
   float: right;
   position: relative;
-  top:-695px;
-  right: -20px;
+  top:-740px;
+  right: -8vh;
 
 }
 
 .artiOrg {
   height:fit-content;
-  margin-top: 20PX;
+  margin-top: 17px;
   width:70vh;
   height: 34vh;
   display: block;
@@ -231,7 +254,7 @@ article h1{
   height: 15vh;
   border-radius: 15px;
   position: absolute;  
-  top: 225px;
+  top: 255px;
 }
 
 
@@ -240,6 +263,15 @@ article h1{
   top: 8px;
   width: 30vh;
   height: 15vh;
+  left: -125px;
+}
+
+.imgLogofooter{
+  position: relative;
+  top: 8px;
+  width: 50vh;
+  height: 30vh;
+
 }
 
 .logo:hover{
@@ -253,8 +285,9 @@ label{
 
 .btnDenuncia {
   width: 120px;
-  top: 150px;
-  position: relative;
+  top: 370px; 
+  border-radius: 15px;
+  position: absolute;
 }
 
 .btnDenuncia:hover {
@@ -282,8 +315,9 @@ label{
   color: #84CDEC;
 }
 
-.textoDenuncia{
 
+.textoDenuncia{
+    margin-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     word-break: keep-all;
@@ -315,7 +349,7 @@ ul li a {
 }
 
 ul li a:hover {
-  color: #52C7A6;
+  color: #84CDEC;
 }
 
 .xd {
@@ -325,6 +359,11 @@ ul li a:hover {
 .item4 img {
   width: 40px;
 }
+.item4 img:hover{
+  color: #84CDEC;
+  background-color: white;
+  cursor: pointer;
+}
 
 .item4 ul li {
   display: inline-block;
@@ -332,36 +371,50 @@ ul li a:hover {
 }
 
 .btnCadastro{
-    width: 100px;
+    width: 120px;
     height: 19px;
-    top: 350px;
     color: #ffffff;
     background-color: #434343;
     border: black;
     border-radius: 8px;
-    
-  
+    font-size: 15px;
+    letter-spacing: 1px;
 }
 
 .btnCadastro:hover{
-
-  color: #52C7A6;
+  color: #84CDEC;
   transition: 0.4s;
   cursor: pointer;
 }
 
-.inpFiltro{
-  justify-content: center;
-  align-items: center;
+.inpFiltro{ 
   width: 450px;
   height: 30px;
   font-size: 2.5vh; 
-  text-align: center;
+  padding: 0 0 0 15px;
   border-radius: 20px;
   background-color: #52C7A6;
   color: white;
   margin-top: -30px;
 }
 .inpFiltro::placeholder{
+  color: white;
+}
+
+.inpOrg{ 
+  position: relative;
+  top: -98px;
+  width: 450px;
+  height: 30px;
+  right: -40px;
+  font-size: 2.5vh; 
+  padding: 0 0 0 15px;
+  border-radius: 20px;
+  background-color: #52C7A6;
+  color: white;
+  margin-top: -30px;
+  
+}
+.inpOrg::placeholder{
   color: white;
 }
