--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ a {
 
 a:hover {
   opacity: 0.7;
-  color: #52C7A6;
+  color: #338BB0;
 }
 
 .logo {
@@ -51,26 +51,28 @@ nav:not(#logcad) {
 }
 
 .btnCadastro{
-  width: 100px;
-  height: 19px;
+  width: 150px;
+  height: 30px;
   margin-right: 20px;
   color: #ffffff;
   background-color: #434343;
   border: black;
   border-radius: 8px;
   left: 100px;
-
+  font-size: 2vh;
+  
 }
 
 .btnCadastro:hover{
 
-color: #52C7A6;
+color: #338BB0;
 transition: 0.4s;
 cursor: pointer;
 }
 #logcad{
 position:absolute;
-right: 30px;
+right: 15vh;
+font-size: 2vh;
 }
 main {
   background-color: aliceblue;
@@ -81,9 +83,6 @@ main {
 .nav-list {
   list-style: none;
   display: flex;
-  
-  
-  
 }
 
 .nav-list li {
@@ -133,6 +132,7 @@ main {
   .nav-list li {
     margin-left: 0;
     opacity: 0;
+    
   }
   .mobile-menu {
     display: block;
@@ -228,7 +228,7 @@ article h1{
 
 .h1Org{
     margin: 10px;
-
+  
     white-space: nowrap;
     text-align: center;
     color: black; /*PRETO temporariamente, mudar pra branco depois */
@@ -246,11 +246,9 @@ article h1{
   width: 15vh;
   height: 15vh;
   border-radius: 15px;
+  margin-top: 5vh;
  
 }
-
-
-
 
 .logo:hover{
   color: #52C7A6;
@@ -259,6 +257,13 @@ article h1{
 label{
   display: flex;
 }
+.btnDenuncia{
+  border-radius: 5px;
+  width: 15vh;
+  height: 2.5vh;
+  margin-top: 1vh;
+}
+
 .btnDenuncia:hover {
   color: #000000;
   background-color: #9E9D9D;
@@ -302,7 +307,57 @@ label{
   padding: 5vh;
   margin: 2vh;
 }
+.tituloden{
+  position: relative;
+  left: 33vh;
+  top: -19vh;
+  font-size: 2.4vh;
+}
+.descricaoden{
+  position: relative;
+  left: 23vh;
+  top: -18vh;
+  font-size: 1.6vh;
+}
 
+.subtituloden{
+  position: relative;
+  left: 17vh;
+}
+.comentario{
+  color: white;
+  font-size: 1.5vh;
+  background-color: #338BB0;
+  position: relative;
+  width: 44.2vh;
+  height: 3vh;
+  top: -17vh;
+  left: 22.9vh;
+}
+.comentarios{
+  background-color: #52C7A6;
+  font-size: 1.2vh;
+  position: relative;
+  width: 44.2vh;
+  height: 9.4vh;
+  top: -17vh;
+  left: 22.9vh;
+}
+.inpComentario{
+  background-color: #9E9D9D;
+  border: transparent;
+  width: 15vh;
+  position: relative;
+  width: 40vh;
+  height: 2vh;
+  top: -20vh;
+  left: 23.5vh;
+  border-radius: 10px;
+  color: white;
+}
+.inpComentario::placeholder{
+  color: white;
+}
 /*-------------------------------------CORPO FIM------------------------------*/
 
 /*----------------------------------FOOTER COMEÇO--------------------------*/
@@ -322,13 +377,15 @@ ul:not(.nav-list){
 
 
 ul li a {
+  
   color: white;
-  font-size: 16px;
+  font-size: 2vh;
   text-decoration: none;
+  margin-right: 5vh;
 }
 
 ul li a:hover {
-  color: #52C7A6;
+  color: #338BB0;
 }
 
 .xd {
