--- a/src/App.css
+++ b/src/App.css
@@ -51,14 +51,13 @@ nav:not(#logcad) {
 }
 
 .btnCadastro{
-  width: 150px;
-  height: 30px;
+  width: 20vh;
+  height: 5vh;
   margin-right: 20px;
   color: #ffffff;
   background-color: #434343;
   border: black;
   border-radius: 8px;
-  left: 100px;
   font-size: 2vh;
   
 }
@@ -230,10 +229,11 @@ article h1{
     color: white;
     border-radius: 9px;
     width: 76vh;
+    font-size: 4.5vh;
 }
 
 .subtituloOrg {
-  font-size: 14px;
+  font-size: 2vh;
   white-space: nowrap;
   text-align: center;
 }
@@ -278,6 +278,7 @@ label{
   color: white;
   border-radius: 9px;
   width: 70vh;
+  font-size: 4.5vh;
 }
 
 .tituloden{
@@ -565,6 +566,7 @@ select{
   color: #ffffff; 
   text-align: center;
   justify-content: center;
+  font-size: 4vh;
 }
 
 .h1Denuncie:hover{
