Alterações no css e adicionando logo insta svg em todas rotas - Gabriel

--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ article:not(#arti){
 article h1{
   color: rgb(66, 66, 66);
   text-align: center;
-  font-size: 34px;
+  font-size: 5vh;
   font-family: Constantia;
 }
 
@@ -313,6 +313,8 @@ label{
 .tituloInst{
   white-space: nowrap;
 }
+
+
 #arti{
   border-radius: 10px;
   background-color: #ffffff;
@@ -333,7 +335,7 @@ label{
 }
 .descricaoden{
   position: relative;
-  left: 23vh;
+  margin-left: 23vh;
   top: -18vh;
   font-size: 1.6vh;
 }
@@ -364,14 +366,14 @@ label{
 .inpComentario{
   background-color: #ffffff;
   border: transparent;
-
+  color: black;
   position: relative;
   width: 40vh;
   height: 2vh;
   top: -20vh;
   left: 23.5vh;
   border-radius: 5px;
-  color: #9E9D9D;
+
 }
 
 .inpComentario:hover{ 
@@ -394,7 +396,7 @@ label{
   width: 100%;
   background-color: black;
   color: aliceblue;
-  font-size: 20px;
+  font-size: 2.1vh;
   
 }
 
@@ -444,24 +446,25 @@ cursor: pointer;
 .inpFiltro{
   justify-content: center;
   align-items: center;
-  width: 80vh;
-  height: 30px;
-  font-size: 2.5vh; 
-  text-align: center;
+  display: flex;
+  width: 75vh;
+  height: 4vh;
+  font-size: 1.7vh; 
+  padding: 1vh;
   border-radius: 10px;
   border: 2px solid #ffffff;
   background-color: #52C7A6;
   color: white;
-
+  margin-top: 1.5vh;
 }
 
 .inpOrg{
   justify-content: center;
   align-items: center;
-  width: 76vh;
-  height: 30px;
-  font-size: 2.5vh; 
-  text-align: center;
+  width: 75vh;
+  height: 4vh;
+  font-size: 1.7vh; 
+  padding: 1vh;
   border-radius: 10px;
   border: 2px solid #ffffff;
   background-color: #52C7A6;
@@ -515,15 +518,15 @@ cursor: pointer;
 }
 
 .btnFiltrar{
-  position: relative;
   border-radius: 1vh;
   font-size: 2.5vh;
   width: 15vh;
   height: 5vh;
-  top: 15vh;
-  left: 42vh;
+  margin-top: 15vh;
+  margin-left: 42vh;
   text-align: center;
   border: solid 0.2vh black;
+  display: inline-block;
 }
 
 .btnFiltrar:hover {
@@ -702,7 +705,7 @@ cursor: pointer;
   padding: 10vh;
 }
 .log1 h2{
-  margin-bottom: 10vh;
+  margin-bottom: 30px;
   font-size: 5vh;
   color: #000000;
   text-align: center;
@@ -731,7 +734,6 @@ cursor: pointer;
   pointer-events: none;
   transition: .5s;
 }
-.log1 .box-user input:focus~label,
 .log1 .box-user input:valid~label
 {
   top: -20px;
@@ -755,7 +757,7 @@ cursor: pointer;
   border: 1px solid black;
   background: rgb(255, 255, 255);
   text-decoration: none;
-  font-size: 1,5vh;
+  font-size: 2vh;
   text-transform: uppercase;
   letter-spacing: 4px;
   margin-top: 5vh;
