--- a/src/App.css
+++ b/src/App.css
@@ -835,3 +835,74 @@ cursor: pointer;
   font-size: 2.65vh;
 
 }
+
+/*------------------------------COMENTARIOS------------------------ */
+
+.Coment{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0 ;
+  right: 0;
+  background: rgb(0, 0, 0, 0.7);
+  z-index: 1000 ;
+}
+
+.Coment1{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 60vh;
+  background: #fff;
+  border-radius: 25vh;
+}
+
+.ComH1 {
+  position:relative;
+  align: center;
+  font-size: 5vh;
+  bottom: 40vh;
+}
+
+
+.btnCom {
+  background: #52C7A6;
+  border-radius: 5px;
+  color: #ffffff;
+  width: 5vh;
+  height: 5vh;
+  transition: 0.18s;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+  bottom: 45vh;
+  left: 80vh;
+  position: relative;
+}
+
+.btnOpen {
+  position: relative;
+  border-radius: 1vh;
+  font-size: 1.5vh;
+  width: 15vh;
+  height: 5vh;
+  bottom: 15vh;
+  left: 22vh;
+  text-align: center;
+  border: solid 0.2vh black;
+  margin-top: 6vh;
+}
+
+.btnOpen:hover{
+  color: #ffffff;
+  background-color: #52C7A6;
+  transition: 0.1s;
+  width: 16vh;
+  height: 6vh;
+  left: 22.5vh;
+  font-size: 1.7vh;
+  cursor: pointer;
+}
