--- a/src/App.css
+++ b/src/App.css
@@ -1070,6 +1070,92 @@ cursor: pointer;
   font-size: 1.7vh;
   cursor: pointer;
 }
+
+/* ---------------------------------- PLANEJAR SOLUÇÃO ------------------------------------------------------------------------- */
+.solucao{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0 ;
+  right: 0;
+  background: rgb(0, 0, 0, 0.7);
+  z-index: 1000;
+}
+.solucao1{
+  margin-top: 10vh;
+  margin-left: 35vh;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  height: 60vh;
+  width: 150vh;
+  border-radius: 5px;
+}
+.h1Solucao{
+  align-items: center;
+  margin-top: 40px;
+  margin-left: 10px;
+  font-size: 5vh; 
+ 
+}
+.h5Solucao{
+  align-items: center;
+  margin-top: 40px;
+  margin-left: 10px;
+  font-size: 3.5vh; 
+}
+.btnEnviarP{
+  background-color: white;
+  border: solid 1px black;
+  border-radius: 10px;
+  padding: 6px;
+  font-size: 2vh;
+  color: #464646;
+  display: flex;
+  width: 50px;
+  height: 30px;
+  margin-top: 35vh;
+  margin-left: 2vh;
+}
+.btnEnviarP:hover{
+  background-color: #52C7A6;
+  border: transparent;
+  border-radius: 10px;
+  padding: 6px;
+  font-size: 2.5vh;
+  color: white;
+  transition: 0.1s;
+  cursor: pointer;
+  width: 65px;
+  
+}
+.inpP{
+  border: 1px solid black;
+  border-radius: 3px;
+  width: 50vh;
+  height: 3vh;
+  position: relative;
+  margin-top: 60px; 
+  margin-left: 7px;
+}
+.btnSairP{
+  background: #52C7A6;
+  border-radius: 5px;
+  color: #ffffff;
+  width: 5vh;
+  height: 5vh;
+  transition: 0.18s;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  cursor: pointer;
+  margin-left: 144vh;
+  margin-top: -15vh;
+
+}
+
+
+
 /* ROTA ADM*/
 
 
