--- a/src/App.css
+++ b/src/App.css
@@ -773,6 +773,8 @@ cursor: pointer;
 }
 
 
+
+
 /* Acompanhar denúncias */
 
 .btnTarefa{
@@ -896,6 +898,7 @@ cursor: pointer;
 
 
 
+
 /*--------------------------------------------------------ROTA LOGIN-------------------------------------------*/
 .bodi{
   display: flex;
@@ -1016,16 +1019,16 @@ cursor: pointer;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 60vh;
+  width: 80vw;
+  height: 80vh;
   background: #fff;
-  border-radius: 25vh;
+  border-radius: 5vh;
 }
 
 .ComH1 {
   position:relative;
   align-items: center;
   font-size: 5vh;
-  bottom: 40vh;
 }
 
 
@@ -1129,13 +1132,14 @@ cursor: pointer;
   
 }
 .inpP{
-  border: 1px solid black;
-  border-radius: 3px;
-  width: 50vh;
-  height: 3vh;
-  position: relative;
-  margin-top: 60px; 
-  margin-left: 7px;
+  border: 0px solid black;
+  border-bottom: 1px solid black;
+  outline: none;
+    width: 50vh;
+    height: 3vh;
+    position: relative;
+    margin-top: 60px;
+    margin-left: 7px;
 }
 .btnSairP{
   background: #52C7A6;
@@ -1152,6 +1156,59 @@ cursor: pointer;
   margin-left: 144vh;
   margin-top: -15vh;
 
+}
+
+/*report-----------------------------------------------------------*/
+
+.Report{
+  z-index: 1;
+  color: #fff;
+  background: linear-gradient(to top, rgb(0, 0, 0), rgb(73, 73, 73));
+  max-width: fit-content;
+  border: double 3px rgb(255, 186, 13);
+  font-family: system-ui;
+}
+
+.Report select {
+  max-width: max-content;
+ 
+}
+
+
+.Report input {
+  padding: 0px 10px 0px 10px;
+  margin-top: 10px;
+  margin-right: 10px;
+  color:white;
+  background-color: inherit;
+  border: 2px white solid;
+  cursor: pointer;
+}
+
+.Report button{
+  height: max-content;
+  width: 20px;
+  float: right;
+  color: white;
+  background-color: red;
+  border-style: none;
+  cursor:pointer;
+}
+
+.conteudo{
+  padding: 10px 10px 10px 10px;
+}
+#btnrep{
+  color:red;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  padding: 5px;
+  transition: 0.2s;
+}
+#btnrep:hover{
+  color:white;
+  background:red;
 }
 
 
